{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 17,
  "lineage": "58420750-0cb6-ba9e-0dbd-6d65bd524497",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/vm-nsg",
            "location": "westeurope",
            "name": "vm-nsg",
            "resource_group_name": "rg-dev",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/networkSecurityGroups/vm-nsg/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "vm-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/subnet-1",
            "name": "subnet-1",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dev",
            "virtual_network_name": "my-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/subnet-2",
            "name": "subnet-2",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dev",
            "virtual_network_name": "my-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/subnet-3",
            "name": "subnet-3",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dev",
            "virtual_network_name": "my-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e3c1f474-d735-40c0-b17e-6aa9b626ed22",
            "id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/virtualNetworks/my-vnet",
            "location": "westeurope",
            "name": "my-vnet",
            "resource_group_name": "rg-dev"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vms[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/networkInterfaces/vm-1-nic",
            "internal_domain_name_suffix": "ot0mdyzv05aebml4nku1mjxnec.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/publicIPAddresses/vm-1-pip",
                "subnet_id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/subnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "vm-1-nic",
            "private_ip_address": "10.0.0.6",
            "private_ip_addresses": [
              "10.0.0.6"
            ],
            "resource_group_name": "rg-dev"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.vms.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.vms[0]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/publicIPAddresses/vm-1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vm-1-pip",
            "resource_group_name": "rg-dev",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vms[1]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/networkInterfaces/vm-2-nic",
            "internal_domain_name_suffix": "ot0mdyzv05aebml4nku1mjxnec.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/publicIPAddresses/vm-2-pip",
                "subnet_id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/subnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "vm-2-nic",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "rg-dev"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.vms.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.vms[1]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/publicIPAddresses/vm-2-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vm-2-pip",
            "resource_group_name": "rg-dev",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vms[2]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/networkInterfaces/vm-3-nic",
            "internal_domain_name_suffix": "ot0mdyzv05aebml4nku1mjxnec.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/publicIPAddresses/vm-3-pip",
                "subnet_id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/virtualNetworks/my-vnet/subnets/subnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "vm-3-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "rg-dev"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.vms.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.vms[2]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/5e47e5a1-7dc4-4abb-87a2-f371200842ea/resourceGroups/rg-dev/providers/Microsoft.Network/publicIPAddresses/vm-3-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vm-3-pip",
            "resource_group_name": "rg-dev",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}